<resources>
    <string name="app_name">Оперативная информация</string>
    <string name="open">Открыть</string>
    <string name="close">Закрыть</string>
    <string name="settings">Наcтройки</string>
    <string name="contacts">Контакты</string>
    <string name="exit">Выход</string>
    <string name="period_settings">Уведомление</string>
    <string name="archive_info">Архивная информация</string>
    <string name="greetings">Париветствие</string>
    <string name="ok">Ok</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="do_you_want_to_exit">Вы хотите выйти?</string>
    <string name="do_you_want_to_set_mark">Вы хотите включить напоминание о событии?</string>
    <string name="do_you_want_to_remove_mark">Вы хотите убрать напоминание о событии?</string>
    <string name="do_you_want_to_remove_notification">Вы хотите удалить событие из архива?</string>
    <string name="loading_please_wait">Загрузка данных, пожалуйста подождите…</string>
    <string name="no_connection">Нет связи</string>
    <string name="first_launch_app">Добро пожаловать в приложение «Оперативная информация Таганрогского водоканала»,\n
        служба обновления оперативной информации активирована
    </string>

    <string name="do_you_want_to_delete_archive">Вы уверены, что хотите удалить архив?</string>
    <string name="archive_delete">Удаление архива</string>

    <string name="do_you_want_to_delete_notifs">Вы уверены, что хотите удалить напоминания?</string>
    <string name="notifs_delete">Удаление напоминаний</string>

    <string name="about">О программе</string>

    <string name="tagWaterlink">Информация с <a href="http://www.tgnvoda.ru/avarii.php">сайта</a>\nМУП «Управление Водоканал»\nг. Таганрог</string>
    <string name="tagWaterSitelink"><a href="http://www.tgnvoda.ru/avarii.php">\nМУП «Управление Водоканал» г. Таганрог</a></string>
    <string name="clear_archive">Очистить\nархив</string>
    <string name="chack_new_data">Актуализировать данные</string>
    <string name="show_notifications">Показывать уведомления</string>
    <string name="show_archive">Отображать архив</string>
    <string name="clear_notifications">Удалить\nнапоминания</string>
    <string name="about_info">Неофициальное приложение для предоставления оперативной информации с официального <a href="http://www.tgnvoda.ru/avarii.php">сайта</a> Таганрогского муниципального унитарного предприятия «УПРАВЛЕНИЕ «ВОДОКАНАЛ».</string>
    <string name="no_internet_connection">Нет интернет соединения</string>
    <string name="get_data_failed">Не удалось получить данные с сайта! Возможно сайт недоступен</string>
    <string name="no_data">Нет данных для отображения</string>
    <string name="author_str">© Vasyutchenko Alexey 2023</string>
    <string name="search">Поиск...</string>
    <string name="help">Помощь</string>

    <string-array name="periods">
        <item>12 часов</item>
        <item>8 часов</item>
        <item>4 часа</item>
    </string-array>
</resources>