<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailsActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logoImg"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/bright_water"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/settingsCaption"
        android:scaleType="fitEnd"
        android:src="@drawable/tagan_image" />

    <TextView
        android:id="@+id/settingsCaption"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/water"
        android:text="@string/settings"
        app:layout_constraintTop_toBottomOf="@id/logoImg"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/settingGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="15dp"
        android:orientation="vertical">


        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/showArchive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/show_archive"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:padding="20dp"
            android:layout_margin="2dp"
            android:textStyle="bold"
            android:background="@drawable/round_shape"
            android:layout_gravity="fill"
            android:layout_columnWeight="1"
            />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/showNotifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/show_notifications"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:padding="20dp"
            android:layout_margin="2dp"
            android:textStyle="bold"
            android:background="@drawable/round_shape"
            android:layout_gravity="fill"
            android:layout_columnWeight="1"
            />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/checkData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/chack_new_data"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:padding="20dp"
            android:layout_margin="2dp"
            android:textStyle="bold"
            android:background="@drawable/round_shape"
            android:layout_gravity="fill"
            android:layout_columnWeight="1"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="30dp">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/clearNotifications"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:layout_margin="5dp"
                android:text="@string/clear_notifications"
                android:textStyle="bold"
                app:backgroundTint="@color/warm"
                app:icon="@drawable/delete_icon"
                android:layout_weight="1"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/clearArchive"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:layout_margin="5dp"
                android:text="@string/clear_archive"
                android:textStyle="bold"
                app:backgroundTint="@color/warm"
                app:icon="@drawable/delete_icon"
                android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>