<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AboutActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_weight="0"
        android:background="@color/bright_water"
        android:scaleType="fitEnd"
        android:src="@drawable/tagan_image" />

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/water"
        android:text="@string/about"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_weight="0"/>

    <TextView
        android:id="@+id/aboutBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="5dp"
        android:layout_marginVertical="10dp"
        android:textColor="@color/dark_water"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/about_info"
        android:scrollbars="vertical"
        android:layout_weight="1"
        />

    <TextView
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/water"
        android:text="@string/author_str"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_weight="0"/>

</LinearLayout>